# ratan-sun

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Taskfile.yaml  docker-compose.yml  pyproject.toml
apps/backend/: Dockerfile  entrypoint.sh  pyproject.toml
apps/backend/src/config/: celery.py  settings.py  urls.py
apps/backend/src/config/formats/en/: formats.py
apps/backend/src/observations/: admin.py  apps.py  enums.py  serializers.py  urls.py  views.py
apps/backend/src/observations/config/: fast_acquisition_1_3ghz.toml  fast_acquisition_1_3ghz_settings.py
apps/backend/src/observations/management/commands/: bin2fits_fast_1_3.py  clear_db_data.py  raw_to_db_fast_1_3.py  test_sync.py
apps/backend/src/observations/migrations/: 0001_initial.py  0002_alter_processingjobbin2fitsfastacquisition1to3ghz_options.py
apps/backend/src/observations/models/: __init__.py  base.py  fast_acquisition_1_3ghz.py
apps/backend/src/observations/services/fast_acquisition_1_3ghz/: fast_acquisition_1_3ghz_bin2fits_converter.py  fast_acquisition_1_3ghz_bin2fits_scheduler.py  fast_acquisition_1_3ghz_filename_parser.py  (+2 more)
apps/backend/src/observations/tasks/: __init__.py  fast_acquisition_1_3ghz.py
apps/backend/src/observations/utils/: enum_mapper.py
apps/backend/src/users/: admin.py  models.py
apps/backend/src/users/migrations/: 0001_initial.py
apps/bin2fits-fast-acquisition-1-3ghz/: Dockerfile  pyproject.toml
apps/bin2fits-fast-acquisition-1-3ghz-nodb/: Dockerfile  pyproject.toml
apps/bin2fits-fast-acquisition-1-3ghz-nodb/src/bin2fits_fast_acquisition_1_3ghz_nodb/: bin2fits_fast_acquisition_1_3ghz_app.py  main.py
apps/bin2fits-fast-acquisition-1-3ghz-nodb/src/bin2fits_fast_acquisition_1_3ghz_nodb/cli/: cli_parser.py
apps/bin2fits-fast-acquisition-1-3ghz-nodb/src/bin2fits_fast_acquisition_1_3ghz_nodb/config/: bin2fits_fast_1_3_app.toml
apps/bin2fits-fast-acquisition-1-3ghz-nodb/src/bin2fits_fast_acquisition_1_3ghz_nodb/services/: batch_processor.py  fast_acquisition_1_3ghz_processing_director.py  parallel_worker.py  report_printer.py  task_report.py
apps/bin2fits-fast-acquisition-1-3ghz-nodb/src/bin2fits_fast_acquisition_1_3ghz_nodb/settings/: bin2fits_fast_acquisition_1_3ghz_settings.py
apps/bin2fits-fast-acquisition-1-3ghz/src/bin2fits_fast_acquisition_1_3ghz/: bin2fits_fast_acquisition_1_3ghz_app.py  main.py
apps/bin2fits-fast-acquisition-1-3ghz/src/bin2fits_fast_acquisition_1_3ghz/cli/: cli_batch_handler.py  cli_parser.py
apps/bin2fits-fast-acquisition-1-3ghz/src/bin2fits_fast_acquisition_1_3ghz/daemon/: watcher.py
apps/bin2fits-fast-acquisition-1-3ghz/src/bin2fits_fast_acquisition_1_3ghz/infrastructure/: database.py  database_settings.py
apps/bin2fits-fast-acquisition-1-3ghz/src/bin2fits_fast_acquisition_1_3ghz/scripts/: check_db.py
apps/bin2fits-fast-acquisition-1-3ghz/src/bin2fits_fast_acquisition_1_3ghz/services/: observation_file_filter.py  parallel_worker.py  process_profiler.py  processing_controller.py  processing_director.py
apps/bin2fits-fast-acquisition-1-3ghz/src/bin2fits_fast_acquisition_1_3ghz/settings/: bin2fits_fast_acquisition_1_3ghz_settings.py
apps/bin2fits-fast-acquisition-1-3ghz/src/bin2fits_fast_acquisition_1_3ghz/utils/: project_meta.py
apps/django-api/: pyproject.toml
apps/django-api/src/: celerybeat-schedule  db.sqlite3
apps/django-api/src/config/: celery.py  settings.py
apps/django-api/src/observations/: admin.py  enums.py  models.py  serializers.py  tasks.py  views.py
apps/django-api/src/observations/config/: fast_acquisition_1_3ghz_settings.py
apps/django-api/src/observations/migrations/: 0001_initial.py
apps/django-api/src/observations/models/: __init__.py  base.py  fast_acquisition_1_3ghz.py
apps/django-api/src/users/migrations/: 0001_initial.py
apps/obs-processor/: Dockerfile  pyproject.toml
apps/obs-processor/src/obs_processor/: fast_acquisition_1_3ghz_charts.py  fast_acquisition_1_3ghz_processing_director.py  fits_accuracy_comparison.py  main.py
libs/ratanpy/: CHANGELOG.md  pyproject.toml
libs/ratanpy/examples/: observation_processor.py  read_fits.py
libs/ratanpy/src/ratanpy/common/: advanced_enum.py
libs/ratanpy/src/ratanpy/fits/: fits_bin_table_reader.py
libs/ratanpy/src/ratanpy/logging_conf/: logger_configurator.py  logging_settings.py
libs/ratanpy/src/ratanpy/observation/: __init__.py  observation.py  observation_data.py  observation_metadata.py  observation_reader.py
libs/ratanpy/src/ratanpy/ratan/: axis.py  calibration_coefficients.py  channel_data.py  channel_mapper.py  coordinate_axes.py  data_extractor.py  data_layout.py  data_receiver.py  data_values.py  observation_mode.py  polarization_type.py  ratan_composite_observation.py  ratan_downsampler.py  ratan_interpolator.py  ratan_observation.py  ratan_observation_data.py  ratan_observation_metadata.py  ratan_observation_processor.py  scan_plotter.py
libs/ratanpy/src/ratanpy/utils/: common_utils.py  date_utils.py  file_utils.py  process_profiler.py  ratanpy_meta.py
(+156 files in other folders)
