[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ratan-600-data-analyzer"
version = "1.4.0"
requires-python = ">= 3.12"
readme = "README.md"
description = ""
authors = [
  { name="Andrei Shendrik", email="andrei.shendrik@gmail.com" },
]

dependencies = [
    "astropy",
    "colorama",
    "matplotlib",
    "numpy",
    "pandas",
    "Pillow",
    "plotly",
    "sunpy",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "sqlalchemy",
    "psycopg2-binary",
    "watchdog",
    "psutil",
    "filelock"
]

[project.optional-dependencies]
bin2fits_fast_acqusition_1_3ghz = []

[project.scripts]
bin2fits_fast_1_3 = "apps.bin2fits_fast_acquisition_1_3ghz.main:main"

[tool.setuptools.package-data]
ratan_600_data_analyzer = [
    "ratan/fast_acquisition_1_3ghz/config/*.toml",
    "ratan/fast_acquisition_1_3ghz/data/*.dat"
]

[tool.deptry]
known_first_party = ["ratan_600_data_analyzer", "apps"]

[tool.deptry.per_rule_ignores]
DEP002 = ["psycopg2-binary"]


