[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bin2fits-fast-acquisition-1-3ghz-nodb"
version = "0.1.0"
requires-python = ">= 3.12"
description = ""

dependencies = [
    "python-dotenv",
    "psycopg2-binary",
    "psutil",
    "pydantic",
    "ratanpy"
]

[project.scripts]
bin2fits-fast-1-3-nodb = "bin2fits_fast_acquisition_1_3ghz_nodb.main:main"

[tool.uv.sources]
ratanpy = { workspace = true }

[tool.deptry]
known_first_party = ["bin2fits_fast_acquisition_1_3ghz_nodb"]

[tool.deptry.per_rule_ignores]
DEP002 = ["psycopg2-binary"]