[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-api"
version = "0.1.0"
requires-python = ">= 3.12"
description = ""

dependencies = [
    "django",
    "djangorestframework",
    "django-cors-headers",
    "psycopg2-binary",
    "celery",
    "redis",
    "python-dotenv"
]

[tool.hatch.build.targets.wheel]
# packages = ["src/core", "src/config"]
packages = ["src"]