[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-worker"
version = "0.1.0"
requires-python = ">= 3.12"
description = ""

dependencies = [
    "ratanpy"
]

[project.scripts]
data_worker = "data_worker.main:main"

[tool.uv.sources]
ratanpy = { workspace = true }

[tool.deptry]
known_first_party = ["ratanpy"]