[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratanpy"
version = "2.0.3"
requires-python = ">= 3.12"
description = "Library for working with RATAN-600 solar observations data"
authors = [
  { name="Andrei Shendrik", email="andrei.shendrik@gmail.com" },
]

dependencies = [
    "astropy",
    "matplotlib",
    "numpy",
    "pandas",
    "Pillow",
    "plotly",
    "sunpy",
    "colorama",
    "pydantic",
    "psutil"
]

[tool.deptry]
known_first_party = ["ratanpy"]